abstract class IConfig {
  Map<String, dynamic> gerarPayload();
}
